--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,14 +38,14 @@ services:
   #     POSTGRES_PASSWORD: example
   redis:
     image: redis
-  # nginx:
-  #   image: nginx:stable-alpine
-  #   volumes:
-  #     - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-  #   ports:
-  #     - "80:80"
-  #   depends_on:
-  #     - node-app
+  nginx:
+    image: nginx:stable-alpine
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+    ports:
+      - "80:80"
+    depends_on:
+      - node-app
 
 volumes:
   mongo-db:
