--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,12 +1,13 @@
 server {
         listen    80;
 
-        location /test {
+        location / {
             proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-for $proxy_add_x_forwarded_for;
+            proxy_set_header Host $http_host;
+            proxy_set_header X-NginX-Proxy true;
 
-            proxy_pass http://example.com/app1/;
+            proxy_pass http://node-app:4000;
+            proxy_redirect off;
         }
-
-    
 }
